[package]
authors = ["Brian Smith <brian@briansmith.org>"]
name = "pregenerate_asm"
version = "0.0.1"

[[bin]]
name = "pregenerate_asm"
path = "../build.rs"

# Keep this in sync with `[build-dependencies]` in ../Cargo.toml.
[dependencies]
cc = { git = "https://github.com/youknowone/cc-rs", rev = "99f4211ad8dcc4f74c9bcd9364b39850538c5cb6", default-features = false }
