[package]
authors = ["Brian Smith <brian@briansmith.org>"]
name = "pregenerate_asm"
version = "0.0.1"

[[bin]]
name = "pregenerate_asm"
path = "../build.rs"

# Keep this in sync with `[build-dependencies]` in ../Cargo.toml.
[dependencies]
cc = { git = "https://github.com/youknowone/cc-rs", rev = "4ca92100c25ac2df679f0cce11c4c3e830f2e455", default-features = false }
